--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,9 @@ body{
 }
 .modal-image{
     max-width: 100%;
+    /* -moz-max-width: 100%; */
     max-height: 20%;
+    /* -moz-max-height: 20%; */
 }
 .description-text{
     font-size: 0.9em;
@@ -19,3 +21,11 @@ body{
 td > p {
     font-weight: 600;
 }
+
+/* firefox only css */
+@-moz-document url-prefix() { 
+    .modal-image{
+        max-width: 100%;
+        max-height: 50%;
+    }
+  }
