--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,41 @@ td > p {
     font-weight: 600;
 }
 
+.product-name {
+    color: white;
+    text-decoration: none;
+}
+
+.product-name:hover{
+    color: white;
+    text-decoration: none;
+}
+
+/* image upload */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+#img-upload{
+    width: 100%;
+}
+
 /* make a footer sticky */
 .footer {
     position: absolute;
